# Lastminute

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  fetch.py
lastminute/: Dockerfile  lastminute.aspx  pyproject.toml
lastminute/src/: config.py  database.py  main.py  models.py  scheduler.py  scraper.py  states.py  utils.py
lastminute/src/handlers/: filters.py  general.py
lastminute/tests/: test_filters.py  test_parsing.py
